# AgenticAIcodebasics

./: main.py  pyproject.toml
3_vectordb/: vector_Db.ipynb
3_vectordb/.ipynb_checkpoints/: vector_Db-checkpoint.ipynb
3_vectordb/.ipynb_checkpoints/my_chroma_db/: chroma.sqlite3
